# neev-voice

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: check_changelog_for_tag.sh  generate_release_notes.py
src/neev_voice/: __init__.py  cli.py  config.py  exceptions.py  log.py  review.py  scratch.py
src/neev_voice/audio/: __init__.py  keyboard.py  recorder.py
src/neev_voice/discuss/: __init__.py  enquiry.py  history.py  migration.py  names.py  portability.py  prepare.py  prepare_enquiry.py  presentation.py  runner.py  session.py  state.py  tui.py
src/neev_voice/discussion/: __init__.py  manager.py
src/neev_voice/intent/: __init__.py  classifier.py  extractor.py
src/neev_voice/llm/: __init__.py  agent.py  claude.py  enrichment_loop.py
src/neev_voice/stt/: __init__.py  base.py  sarvam.py
src/neev_voice/tts/: __init__.py  base.py  edge.py  sarvam.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_generate_release_notes.py  test_log.py  test_review.py  test_scratch.py
tests/test_audio/: __init__.py  test_keyboard.py  test_recorder.py
tests/test_discuss/: __init__.py  test_enquiry.py  test_history.py  test_migration.py  test_names.py  test_portability.py  test_prepare.py  test_prepare_enquiry.py  test_presentation.py  test_runner.py  test_session.py  test_state.py  test_tui.py
tests/test_discussion/: __init__.py  test_manager.py
tests/test_intent/: __init__.py  test_classifier.py  test_extractor.py
tests/test_llm/: __init__.py  test_agent.py  test_claude.py  test_enrichment_loop.py
tests/test_stt/: __init__.py  test_base.py  test_sarvam.py
tests/test_tts/: __init__.py  test_base.py  test_edge.py  test_sarvam.py
