[project]
name = "neev-voice"
version = "0.2.0"
description = "A Python CLI voice agent for Hindi-English mixed speech - listens, transcribes, extracts intent, and discusses plan documents."
readme = {text = "", content-type = "text/markdown"}
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "edge-tts>=6.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
neev = "neev_voice.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neev_voice"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=neev_voice --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["neev_voice"]

[tool.coverage.report]
fail_under = 80
show_missing = true
