[project]
name = "neev-voice"
dynamic = ["version"]
description = "A Python CLI voice agent for Hindi-English mixed speech - listens, transcribes, extracts intent, and discusses plan documents."
readme = {text = "", content-type = "text/markdown"}
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "edge-tts>=6.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "claude-agent-sdk>=0.1.0",
    "websockets>=13.0",
]

[project.scripts]
neev = "neev_voice.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/neev_voice/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/neev_voice"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "pre-commit>=4.0.0",
    "mypy>=1.8.0",
    "bump-my-version>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=neev_voice --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "S", "PERF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "S311", "N817", "RUF012"]
"src/neev_voice/discuss/names.py" = ["S311"]
"src/neev_voice/cli.py" = ["S603", "S607"]
"src/neev_voice/audio/recorder.py" = ["SIM115"]
"src/neev_voice/tts/sarvam.py" = ["SIM115"]
"src/neev_voice/tts/edge.py" = ["SIM115"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["neev_voice"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bumpversion]
current_version = "0.9.5"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "src/neev_voice/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "VERSION"

[[tool.bumpversion.files]]
filename = "README.md"
search = "@v{current_version}"
replace = "@v{new_version}"
